--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@ img {
    border-radius:100%;
    
 }
+
+body {
+background-image:url("http://www.disneyclips.com/imagesnewb/imageslwrakr01/mickey_basketball3.gif ");
+background-color: orange;
+}
